2014-05-29  Karl Ratzsch  <ratzsch@uni-freiburg.de>

	* docs/gnuplto.doc:  Improve documentation of `update` command.
	Patch #686

	* src/win/wgdiplus.c src/win/wgraph.c:  Change order of pointtypes to
	match the sequence in other terminals (cairo, postscript, gd, svg).

2014-05-28  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graph3d.c (plot3d_points):  Handle pointtype PT_CHARACTER.

	* src/plot3d.c:  Rearrange the order of testing for plot style options
	so that it is not possible to end up with uninitialized font or text
	properties.

2014-05-27  Ethan A Merritt  <merritt@u.washington.edu>

	* src/datafile.c (df_readascii): Report status DF_UNDEFINED if a data
	value evaluates to the constant "NaN", just as if we calculated it on
	the fly to be e.g. 1/0.
	* src/stats.c: Remove out-of-date comment that incorrectly describes 
	what happens in this case.
	Bug #1408

2014-05-26  Ethan A Merritt  <merritt@u.washington.edu>

	* term/js/gnuplot_svg.js term/svg.trm:
	Grey out key entries when corresponding plot is toggled off.

	* src/qtterminal/QtGnuplotItems.* src/qtterminal/QtGnuplotScene.cpp:
	Grey out key entries when corresponding plot is toggled off.

	* src/wxterminal/wxt_gui.cpp (wxt_grey_out_key_box):
	Grey out key entries when corresponding plot is toggled off.

2014-05-24  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/wxterminal/wxt_gui.cpp (wxt_waitforinput):  Do not wait for an
	event when only checking for mouse events.
	Bugfix

2014-05-23  Ethan A Merritt  <merritt@u.washington.edu>

	* src/boundary.c:  A width adjustment for the length of the key title
	was being applied to every column of entries in the key instead of just
	once for the whole key.  Apply the "set key {no}enhanced" property to
	the key title as well as to the individual plot titles.
	Bugfix

2014-05-19  Ethan A Merritt  <merritt@u.washington.edu>

	* src/wxterminal/wxt_gui.h: Apparently wxWidgets3 (wxgtk3) threads call